@@ -1,0 +1,11 @@
+some info about tv resolutions
+==============================
+
+
+see also https://de.wikipedia.org/wiki/High_Definition_Television
+
+1920x1080  (FULL- HDTV)
+1280x720   (HDTV)
+
+1024x768   (XGA)
+
