@@ -3,3 +3,4 @@
 /vector_2d.o
 /texture.o
 /objects.o
+/input.o
